--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Find a watering hole in Leeds",
   "main": "index.js",
-  "scripts": {
-    "test": "test"
+"scripts": {
+    "start": "node app.js",
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
@@ -19,4 +20,5 @@
   "dependencies": {
     "express": "^4.18.1"
   }
+
 }
