--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Find a watering hole in Leeds",
   "main": "index.js",
 "scripts": {
-    "start": "node app.js",
+    "start": "node server.js",
     "test": "node test.js"
   },
   "repository": {
@@ -23,5 +23,4 @@
   "engines": {
     "node": "16.x"
   }
-
 }
